--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -39,7 +39,7 @@
 }
 
 @keyframes image-animate-joinus{
-    from{background-image: url("https://i.pinimg.com/originals/27/68/3f/27683f882df177638517deea7ab258f9.jpg");
+    from{background-image: url("https://pbs.twimg.com/media/ELSX7KxWoAAVqzA.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: 300px;
@@ -47,7 +47,7 @@
         grid-area: cover-site;}
 
     
-    to{background-image: url("https://www.schnittberichte.com/pics/SBs/200/961493/sl12.jpg");
+    to{background-image: url("http://noiselesschatter.com/wp-content/uploads/2014/03/alfep25d.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 300px;
